<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_header"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="36dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_user"
            tools:text="Lorem Ipsum"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_greetings"
            app:layout_constraintStart_toStartOf="@+id/tv_greetings" />

        <TextView
            android:id="@+id/tv_greetings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/greetings"
            android:textColor="@color/seed"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_menu"
            tools:text="Lorem Ipsum" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_white"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.search.SearchBar
            android:id="@+id/sb_menu"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/search_menu"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toStartOf="@+id/iv_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_profile" />

        <com.google.android.material.search.SearchView
            android:id="@+id/sv_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_anchor="@id/sb_menu"
            android:hint="@string/search_menu"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toStartOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>